--- a/web-app/templates/index.html
+++ b/web-app/templates/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="col-lg-12 text-center mt-5">
-        <h1>Bootstrap - Search Box Plugin</h1>
+        <h1>Sinhala Lyrics Search</h1>
     </div>
     <div class="col-md-4 offset-md-4 mt-5 border border-success pt-3">
         <form id="searchForm">
